--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ body {
     margin: auto;
 }
 
+.section {
+    padding-top: 64px; 
+    padding-bottom: 92px;
+}
+
 .hero-subtitle {
     display: inline-block;
     font-size: 24px;
@@ -87,4 +92,43 @@ body {
     background-repeat: no-repeat;
     background-position: center top -40px;
     border: 13px solid #eee;
+}
+
+.section-title{
+    font-weight: bold;
+    font-size: 36px;
+    line-height: auto;
+}
+
+.features{
+    background-color: #000000;
+}
+
+.features-block{
+    margin-top: 84px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.features-item{
+    flex-basis: 30%;
+    margin-bottom: 63px;
+}
+
+.features-image {
+    margin-bottom: 22px;
+}
+
+.features-title{
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    margin: 0;
+    margin-bottom: 16px;
+}
+
+.features-text {
+    font-size: 16px;
+    line-height: 28px;
 }
