--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,12 @@ body {
     margin-bottom: 105px;
 }
 
-.social-links {
-    display: flex;
-    justify-content: space-between;
+.social-link {
+    margin-left: 20px;
 }
 
-.social-links a {
-    margin-left: 20px;
+.social-link:first-child {
+    margin-left: 0;
 }
 
 .container {
@@ -114,6 +113,9 @@ body {
 .features-item {
     flex-basis: 30%;
     margin-bottom: 63px;
+
+    animation: bounce; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
 }
 
 .features-image {
@@ -136,6 +138,8 @@ body {
 /* contacts */
 .contacts-block {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .contacts-form {
@@ -146,7 +150,7 @@ body {
     padding: 40px 35px 49px 35px;
 }
 
-.contacts-title {
+.contacts-form_title {
     font-weight: bold;
     font-size: 18px;
     line-height: 28px;
@@ -183,4 +187,51 @@ body {
 
 .form-button {
     width: 100%;
+}
+
+.contacts-text {
+    flex-basis: 50%;
+}
+
+.contacts-data {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 42px;
+}
+
+.contacts-phone,
+.contacts-mail {
+    flex-basis: 50%;
+    margin-bottom: 53px;
+}
+
+.contacts-social {
+    flex-basis: 100%;
+}
+
+.contacts-title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.contacts-link {
+    text-decoration: none;
+    color: inherit;
+    margin-right: 37px;
+}
+
+.contacts-link:hover {
+    text-decoration: underline;
+}
+
+.contacts-policy{
+    display: inline-block;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration: underline;
+    color: #A5A5A5;
+    margin-top: 73px;
 }
